--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
 </div>
 </aside>
 
-<script src = "script/brainRush.js">
+<script src = "script/brainRush.js"></script>
+<script>
+alert("The rules page content and footer have not been made yet, and there are many features unavailable. Please proceed to the other pages.");
 </script>
-
 </body>
 </html>
