--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	</div> 
 	
 	<div class = "sideButton"> 
-		<a href = "temporary" target = "blank" class = "sideLink"> View the Website's Code </a> 
+		<a href = "https://github.com/viordona/Project_SodiumOrdona.git" target = "blank" class = "sideLink"> View the Website's Code </a> 
 		<img id = "sideGithub" src = "images/icons/github2.png" alt = "Discord Logo"> </img> 
 	</div>
 </div>
@@ -113,7 +113,7 @@
 
 <script src = "script/brainRush.js"></script>
 <script>
-alert("The rules page content and footer have not been made yet, and there are many features unavailable. Please proceed to the other pages.");
+alert("The home page content and footer have not been made yet, and there are many features unavailable. Please proceed to the other pages.");
 </script>
 </body>
 </html>
