--- a/htdocs/leaderboard.html
+++ b/htdocs/leaderboard.html
@@ -104,7 +104,7 @@
 	</div> 
 	
 	<div class = "sideButton"> 
-		<a href = "temporary" target = "blank" class = "sideLink"> View the Website's Code </a> 
+		<a href = "https://github.com/viordona/Project_SodiumOrdona.git" target = "blank" class = "sideLink"> View the Website's Code </a> 
 		<img id = "sideGithub" src = "../images/icons/github2.png" alt = "Discord Logo"> </img> 
 	</div>
 </div>
